fix(login ui): remove in-line styling, update spacing and colors

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -2,14 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
   height: 60px;
 }
 
@@ -19,14 +17,19 @@
 }
 
 .logo-box {
-  background-color: rgba(72, 72, 72, 255);
+  background-color: rgb(72 72 72);
   color: #dedede;
   height: 100%;
   text-align: center;
+  font-size: large;
+  padding: 0px 20px 0px 5px;
 }
 
+.logo-box img {
+  height: 40px;
+}
 .google {
-  background-color: rgba(72, 72, 72, 255);
+  background-color: rgb(72 72 72);
   color: #dedede;
   height: 100%;
   text-align: center;
@@ -39,13 +42,23 @@
 }
 
 .link {
-  padding: 10px;
+  padding: 8px;
+  margin-right: 8px;
 }
 
-.container {
-  margin: 0;
-  padding: 0;
-  /* width: 100%; */
+.hero-logo {
+  padding: 8px;
+  margin-right: 8px;
+  letter-spacing: 2px;
+  font-size: larger;
+  font-weight: 700;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.nav-link {
+  padding: 8px;
+  color: rgb(105, 105, 105);
+  margin-left: 8px;
 }
 
 form {
@@ -56,27 +69,49 @@ form {
 }
 
 .card form {
-  width: 300px;
+  width: 320px;
   margin: auto;
   background-color: white;
   height: fit-content;
-  border-radius: 1rem;
-  padding: 20px;
+  border-radius: 0.25rem;
+  padding: 24px;
 }
 
 .subscribe {
-  background-color: whitesmoke;
-  color: black;
+  background-color: white;
+  color: rgb(72 72 72);
   height: fit-content;
   border-radius: 0.25rem;
-
   flex: 1;
-  max-width: 300px;
+  max-width: fit-content;
+  padding: 10px;
+}
+
+.subscribe p {
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: large;
+}
+
+.subscribe label {
+  margin-bottom: 8px;
+  color: rgb(150, 151, 155);
+  font-size: small;
+}
+
+.subscribe input {
+  background-color: rgb(238 238 238);
+}
+
+.subscribe button {
+  margin-top: 20px;
+  padding: 8px;
+  border-radius: 5px;
+  font-size: large;
 }
 
 .card {
-  padding-top: 160px;
-  padding-bottom: 160px;
+  margin-bottom: 100px;
 }
 
 .hero {
@@ -105,7 +140,7 @@ footer img {
 
 .flex-between {
   display: flex;
-  padding-bottom: 20px;
+  justify-content: space-between;
 }
 
 .footer-icons {
@@ -129,40 +164,32 @@ footer .card {
 
 input {
   padding: 8px;
-  background-color: whitesmoke;
+  background-color: rgb(238 238 238);
   border-radius: 5px;
   padding-bottom: 8px;
   padding-top: 8px;
-  border: solid 1px grey;
+  border: solid 1px rgb(238 238 238);
 }
 
 label {
-  padding-bottom: 8px;
-  padding-top: 8px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 20px;
+  margin-bottom: 2px;
+  color: rgb(105, 105, 105);
 }
 
 .login-button {
   margin-top: 40px;
-  padding: 8px;
+  padding: 10px;
   border-radius: 5px;
   width: 50%;
   color: white;
-  margin-bottom: 8px;
-  background-color: #29cc97;
-  border: #29cc97;
-}
-
-.subscribe button {
-  margin-top: 20px;
-  padding: 8px;
-  border-radius: 5px;
-  margin-bottom: 8px;
+  margin-bottom: 20px;
+  background-color: rgb(41 204 151);
+  border: rgb(41 204 151);
 }
 
 .blue {
-  color: blue;
+  color: rgb(54 106 182);
   padding-left: 5px;
 }
 
@@ -178,4 +205,56 @@ label {
   justify-content: center;
   padding-top: 20px;
   padding-bottom: 20px;
+}
+
+.flex-center {
+  color: white;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 60px;
+  margin-top: 90px;
+}
+
+.flex-center img {
+  width: 30px;
+}
+
+.flex-1 {
+  flex: 1;
+  max-width: 640px;
+}
+
+.footer-body {
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 100px;
+}
+
+button,
+a,
+.footer-icons {
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.red {
+  color: red;
+}
+
+.header {
+  width: 100%;
+  text-align: center;
+  border-bottom: 1px solid gray;
+  line-height: 0.1em;
+  margin: 15px 0;
+}
+
+.header span {
+  background: #fff;
+  padding: 0 10px;
 }
